{
    "name": "PlayerInputMap",
    "maps": [
        {
            "name": "Player",
            "id": "3f09e6a3-51f5-4107-96d4-60e0b0ae5264",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "eb591c7c-0f3d-486d-acea-80804e771461",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FireHarpoon",
                    "type": "Button",
                    "id": "aa80d4fd-ee8d-4409-b4fc-02c693475a30",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FocusHarpoon",
                    "type": "Button",
                    "id": "b8545e07-0d14-4c11-96b3-0a45742a7a07",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ReelHarpoon",
                    "type": "Button",
                    "id": "46123ba1-202e-49de-a560-ebd47b8d6d5c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "fe01f416-f239-4edd-b4bf-89803f8eebdd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EnterTitleScreen",
                    "type": "Button",
                    "id": "a9f23d98-9081-4c63-ad9c-3864b241dd38",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "f64c41b5-9b3b-4e56-a642-492f123a3132",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e0143a4f-8c47-49df-b7d8-17db3168c38f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "602bfad8-a106-4efe-82c6-74e4287c6677",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "481922af-cde3-48ae-9dd9-a3b35782310b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "421acf00-ea3c-4cb9-9ce0-28c1e8f66230",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "30b55e33-ea3f-421c-ae27-6f49bd3466ee",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FireHarpoon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a56680af-279a-4e05-80e3-21fe7f52c577",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FocusHarpoon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "952a3339-bf6f-45ea-a788-f0715d180342",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FocusHarpoon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fe6eab22-65f6-4bcf-b7c0-fa1f58688e0a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ReelHarpoon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bc9785c1-07f6-46e5-8895-7ab3d10af51c",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f3ded611-cc75-46a5-b590-9c955f2d1395",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EnterTitleScreen",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "DebugConsole",
            "id": "69791357-35db-4132-b6c4-8c6db36b037f",
            "actions": [
                {
                    "name": "OpenCloseConsole",
                    "type": "Button",
                    "id": "a91450ca-3443-4b7a-a599-0592de3ef96e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "FreeCamMoveRight",
                    "type": "PassThrough",
                    "id": "e1b4d9e2-c1f0-4ba9-8762-804963097b48",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FreeCamLookRight",
                    "type": "PassThrough",
                    "id": "b6a40698-9dde-4acb-94c6-d9b9851e0858",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6cebaaa5-26f6-4213-880a-9af44203fd38",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenCloseConsole",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Move",
                    "id": "a6a08539-d924-4f21-b576-6e477a664669",
                    "path": "3DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FreeCamMoveRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "6389f561-4576-4010-87cf-06f1c16f4e90",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "FreeCamMoveRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "86dbc300-ab87-40ed-9b59-074b624036a5",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "FreeCamMoveRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "43defc72-9534-4f82-a2bb-46c0724bc26a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "FreeCamMoveRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "e7e6617b-5a17-4f8e-bfe7-9c930f151258",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "FreeCamMoveRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "forward",
                    "id": "c70a4c15-d541-4b8d-9dd2-c833fdb5d91f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "FreeCamMoveRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "backward",
                    "id": "afde98fa-348a-42ee-9381-32ae17032ec6",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "FreeCamMoveRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Look",
                    "id": "ea89932d-ccbe-4640-b741-3c4840fadfad",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FreeCamLookRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "51fd6ad9-d019-4646-a605-d4548c86becd",
                    "path": "<Mouse>/delta/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "FreeCamLookRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "7ed5f78e-0288-4d57-846c-91578586f7fe",
                    "path": "<Mouse>/delta/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "FreeCamLookRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "0b195d9e-1ff3-4670-b3cc-d26ac95940f6",
                    "path": "<Mouse>/delta/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "FreeCamLookRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "327ea4ad-a5bb-4783-a055-2f517450e574",
                    "path": "<Mouse>/delta/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "FreeCamLookRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard and Mouse",
            "bindingGroup": "Keyboard and Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}